--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A tool to copy text or file from one place, and get it from another place",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "build-static": "tsc -p static && webpack",
+    "lint": "tslint index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,9 +24,25 @@
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
+    "@angular/common": "~2.0.1",
+    "@angular/compiler": "~2.0.1",
+    "@angular/core": "~2.0.1",
+    "@angular/forms": "~2.0.1",
+    "@angular/http": "~2.0.1",
+    "@angular/platform-browser": "~2.0.1",
+    "@angular/platform-browser-dynamic": "~2.0.1",
+    "@angular/router": "~3.0.1",
+    "@angular/upgrade": "~2.0.1",
+    "@types/core-js": "^0.9.34",
     "@types/express": "^4.0.33",
     "@types/minimist": "^1.1.29",
     "@types/socket.io": "^1.4.27",
-    "typescript": "^2.0.3"
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "tslib": "^1.0.0",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.3",
+    "webpack": "^1.13.2",
+    "zone.js": "^0.6.25"
   }
 }
