--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "build-static": "tsc -p static && webpack",
+    "build-static": "tsc -p static && webpack --display-modules",
     "lint": "tslint index.ts \"static/*.ts\""
   },
   "repository": {
