--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "build-static": "tsc -p static && webpack --display-modules",
-    "lint": "tslint index.ts \"static/*.ts\""
+    "build-static": "tsc -p static && npm run minifier-template && webpack --display-modules",
+    "lint": "tslint index.ts \"static/*.ts\"",
+    "minifier-template": "html-minifier --collapse-whitespace --case-sensitive static/app.template.html -o static/app.html"
   },
   "repository": {
     "type": "git",
@@ -37,8 +38,12 @@
     "@types/express": "^4.0.33",
     "@types/minimist": "^1.1.29",
     "@types/socket.io": "^1.4.27",
+    "@types/socket.io-client": "^1.4.27",
     "core-js": "^2.4.1",
+    "html-minifier": "^3.1.0",
+    "raw-loader": "^0.5.1",
     "rxjs": "5.0.0-beta.12",
+    "socket.io-client": "^1.4.8",
     "tslib": "^1.0.0",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
