--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/socket.io-client": "^1.4.27",
     "core-js": "^2.4.1",
     "html-minifier": "^3.1.0",
+    "qrcode": "^0.5.0",
     "raw-loader": "^0.5.1",
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.4.8",
