--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "A tool to copy text or file from one place, and get it from another place",
   "main": "index.js",
   "scripts": {
+    "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css -o static/vendor.bundle.css",
+    "bundle-vendor-css-debug": "cat ./node_modules/bootstrap/dist/css/bootstrap.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css > static/vendor.bundle.css",
+    "bundle-index-css": "cleancss static/index.css -o static/index.bundle.css",
+    "bundle-index-css-debug": "cat static/index.css > static/index.bundle.css",
+    "clean": "rm -f static/vendor.bundle.js static/vendor.bundle.css static/main.bundle.js static/index.bundle.css static/main.js static/main.js.map static/vendor.js static/vendor.js.map static/vendor.bundle.js static/template.html static/app.html",
+    "clean-rev": "rm -f static/vendor.bundle-*.js static/vendor.bundle-*.css static/main.bundle-*.js static/index.bundle-*.css",
+    "rev": "npm run clean-rev && rev-static static/vendor.bundle.css static/index.bundle.css static/vendor.bundle.js static/main.bundle.js static/index.ejs.html -o static/index.html -- --rmWhitespace",
     "build": "tsc",
-    "build-static": "tsc -p static && npm run minifier-template && webpack --display-modules",
-    "build-static-debug": "tsc -p static && npm run minifier-template-debug && webpack --display-modules --config webpack.config.debug.js",
+    "build-static": "npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && npm run minifier-template && webpack --display-modules && npm run rev && npm run clean",
+    "build-static-debug": "npm run bundle-vendor-css-debug && npm run bundle-index-css-debug && tsc -p static && npm run minifier-template-debug && webpack --display-modules --config webpack.config.debug.js && npm run rev && npm run clean",
     "lint": "tslint index.ts \"static/*.ts\"",
     "minifier-template": "html-minifier --collapse-whitespace --case-sensitive static/app.template.html -o static/app.html",
     "minifier-template-debug": "html-minifier --case-sensitive static/app.template.html -o static/app.html"
@@ -41,10 +48,14 @@
     "@types/minimist": "^1.1.29",
     "@types/socket.io": "^1.4.27",
     "@types/socket.io-client": "^1.4.27",
+    "bootstrap": "^3.3.7",
+    "clean-css": "^3.4.20",
     "core-js": "^2.4.1",
+    "github-fork-ribbon-css": "^0.2.1",
     "html-minifier": "^3.1.0",
     "qrcode": "^0.5.0",
     "raw-loader": "^0.5.1",
+    "rev-static": "^1.2.0",
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.4.8",
     "tslib": "^1.0.0",
