--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
   "dependencies": {
     "express": "^4.14.0",
     "minimist": "^1.2.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.5.0"
   },
   "devDependencies": {
-    "@angular/common": "~2.0.1",
-    "@angular/compiler": "~2.0.1",
-    "@angular/core": "~2.0.1",
-    "@angular/forms": "~2.0.1",
-    "@angular/http": "~2.0.1",
-    "@angular/platform-browser": "~2.0.1",
-    "@angular/platform-browser-dynamic": "~2.0.1",
-    "@angular/router": "~3.0.1",
-    "@angular/upgrade": "~2.0.1",
+    "@angular/common": "^2.0.2",
+    "@angular/compiler": "^2.0.2",
+    "@angular/core": "^2.0.2",
+    "@angular/forms": "^2.0.2",
+    "@angular/http": "^2.0.2",
+    "@angular/platform-browser": "^2.0.2",
+    "@angular/platform-browser-dynamic": "^2.0.2",
+    "@angular/router": "^3.0.2",
+    "@angular/upgrade": "^2.0.2",
     "@types/clipboard": "^1.5.29",
     "@types/core-js": "^0.9.34",
     "@types/express": "^4.0.33",
@@ -60,7 +60,7 @@
     "raw-loader": "^0.5.1",
     "rev-static": "^1.3.0",
     "rxjs": "5.0.0-beta.12",
-    "socket.io-client": "^1.4.8",
+    "socket.io-client": "^1.5.0",
     "tslib": "^1.0.0",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
