--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,7 @@
         "strictNullChecks": true,
         "noImplicitReturns": true,
         "skipLibCheck": true,
-        "noEmitHelpers": true,
-        "lib": [
-            "scripthost",
-            "es5",
-            "dom"
-        ]
+        "noEmitHelpers": true
     },
     "exclude": [
         "static/",
