--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copy-tool",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A tool to copy text or file from one place, and get it from another place",
   "main": "index.js",
   "scripts": {
@@ -23,8 +23,8 @@
     "type": "git",
     "url": "git+https://github.com/plantain-00/copy-tool.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "york yao",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/plantain-00/copy-tool/issues"
   },
@@ -32,38 +32,39 @@
   "dependencies": {
     "express": "^4.14.0",
     "minimist": "^1.2.0",
-    "socket.io": "^1.5.0"
+    "socket.io": "^1.6.0"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.2",
-    "@angular/compiler": "^2.0.2",
-    "@angular/core": "^2.0.2",
-    "@angular/forms": "^2.0.2",
-    "@angular/http": "^2.0.2",
-    "@angular/platform-browser": "^2.0.2",
-    "@angular/platform-browser-dynamic": "^2.0.2",
-    "@angular/router": "^3.0.2",
-    "@angular/upgrade": "^2.0.2",
+    "@angular/common": "^2.2.1",
+    "@angular/compiler": "^2.2.1",
+    "@angular/core": "^2.2.1",
+    "@angular/forms": "^2.2.1",
+    "@angular/http": "^2.2.1",
+    "@angular/platform-browser": "^2.2.1",
+    "@angular/platform-browser-dynamic": "^2.2.1",
+    "@angular/router": "^3.2.1",
+    "@angular/upgrade": "^2.2.1",
     "@types/clipboard": "^1.5.29",
     "@types/express": "^4.0.33",
     "@types/minimist": "^1.1.29",
     "@types/socket.io": "^1.4.27",
     "@types/socket.io-client": "^1.4.27",
     "bootstrap": "^3.3.7",
-    "clean-css": "^3.4.20",
-    "clipboard": "^1.5.12",
+    "clean-css": "^3.4.21",
+    "clipboard": "^1.5.15",
     "core-js": "^2.4.1",
+    "file-uploader-component": "^1.1.1",
     "github-fork-ribbon-css": "^0.2.1",
-    "html-minifier": "^3.1.0",
+    "html-minifier": "^3.2.2",
     "qrcode": "^0.5.0",
     "raw-loader": "^0.5.1",
-    "rev-static": "^1.3.0",
+    "rev-static": "^1.3.1",
     "rxjs": "5.0.0-beta.12",
-    "socket.io-client": "^1.5.0",
+    "socket.io-client": "^1.6.0",
     "tslib": "^1.0.0",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.3",
-    "webpack": "^1.13.2",
-    "zone.js": "^0.6.25"
+    "tslint": "^4.0.1",
+    "typescript": "^2.0.10",
+    "webpack": "^1.13.3",
+    "zone.js": "^0.6.26"
   }
 }
