--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/clipboard": "^1.5.29",
     "@types/express": "^4.0.33",
     "@types/minimist": "^1.1.29",
+    "@types/qrcode": "0.0.2",
     "@types/socket.io": "^1.4.27",
     "@types/socket.io-client": "^1.4.27",
     "bootstrap": "^3.3.7",
