--- a/package.json
+++ b/package.json
@@ -22,49 +22,49 @@
     "type": "git",
     "url": "git+https://github.com/plantain-00/copy-tool.git"
   },
-  "author": "york yao",
+  "author": "York Yao",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/plantain-00/copy-tool/issues"
   },
   "homepage": "https://github.com/plantain-00/copy-tool#readme",
   "dependencies": {
-    "express": "^4.14.0",
-    "minimist": "^1.2.0",
-    "socket.io": "^1.6.0"
+    "express": "4.14.0",
+    "minimist": "1.2.0",
+    "socket.io": "1.7.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.2.2",
-    "@angular/compiler": "^2.2.2",
-    "@angular/core": "^2.2.2",
-    "@angular/forms": "^2.2.2",
-    "@angular/http": "^2.2.2",
-    "@angular/platform-browser": "^2.2.2",
-    "@angular/platform-browser-dynamic": "^2.2.2",
-    "@angular/router": "^3.2.2",
-    "@angular/upgrade": "^2.2.2",
-    "@types/clipboard": "^1.5.29",
-    "@types/express": "^4.0.33",
-    "@types/minimist": "^1.1.29",
+    "@angular/common": "2.3.0",
+    "@angular/compiler": "2.3.0",
+    "@angular/core": "2.3.0",
+    "@angular/forms": "2.3.0",
+    "@angular/http": "2.3.0",
+    "@angular/platform-browser": "2.3.0",
+    "@angular/platform-browser-dynamic": "2.3.0",
+    "@angular/router": "3.3.0",
+    "@angular/upgrade": "2.3.0",
+    "@types/clipboard": "1.5.30",
+    "@types/express": "4.0.34",
+    "@types/minimist": "1.1.29",
     "@types/qrcode": "0.0.2",
-    "@types/socket.io": "^1.4.27",
-    "@types/socket.io-client": "^1.4.27",
-    "bootstrap": "^3.3.7",
-    "clean-css": "^3.4.21",
-    "clipboard": "^1.5.15",
-    "core-js": "^2.4.1",
-    "file-uploader-component": "^1.1.3",
-    "github-fork-ribbon-css": "^0.2.1",
-    "html-minifier": "^3.2.2",
-    "qrcode": "^0.5.0",
-    "raw-loader": "^0.5.1",
-    "rev-static": "^1.3.1",
+    "@types/socket.io": "1.4.27",
+    "@types/socket.io-client": "1.4.29",
+    "bootstrap": "3.3.7",
+    "clean-css": "3.4.21",
+    "clipboard": "1.5.15",
+    "core-js": "2.4.1",
+    "file-uploader-component": "1.1.3",
+    "github-fork-ribbon-css": "0.2.1",
+    "html-minifier": "3.2.3",
+    "qrcode": "0.5.0",
+    "raw-loader": "0.5.1",
+    "rev-static": "1.3.1",
     "rxjs": "5.0.0-beta.12",
-    "socket.io-client": "^1.6.0",
-    "tslib": "^1.1.0",
-    "tslint": "^4.0.1",
-    "typescript": "^2.0.10",
-    "webpack": "^1.13.3",
-    "zone.js": "^0.6.26"
+    "socket.io-client": "1.7.1",
+    "tslib": "1.2.0",
+    "tslint": "4.0.2",
+    "typescript": "2.1.4",
+    "webpack": "1.14.0",
+    "zone.js": "0.7.2"
   }
 }
