--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/plantain-00/copy-tool#readme",
   "dependencies": {
     "express": "4.14.0",
+    "lodash.debounce": "^4.0.8",
     "minimist": "1.2.0",
     "socket.io": "1.7.1"
   },
@@ -59,7 +60,7 @@
     "qrcode": "0.5.0",
     "raw-loader": "0.5.1",
     "rev-static": "1.3.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-rc.4",
     "socket.io-client": "1.7.1",
     "tslib": "1.2.0",
     "tslint": "4.0.2",
