support direct connection

--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -11,6 +11,11 @@
         "skipLibCheck": true,
         "noEmitHelpers": true,
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "lib": [
+            "es5",
+            "dom",
+            "es2015.promise"
+        ]
     }
 }
