--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
   "homepage": "https://github.com/plantain-00/copy-tool#readme",
   "dependencies": {
     "express": "4.14.0",
-    "lodash.debounce": "^4.0.8",
+    "lodash.debounce": "4.0.8",
     "minimist": "1.2.0",
-    "socket.io": "1.7.1"
+    "socket.io": "1.7.2"
   },
   "devDependencies": {
-    "@angular/common": "2.3.0",
-    "@angular/compiler": "2.3.0",
-    "@angular/core": "2.3.0",
-    "@angular/forms": "2.3.0",
-    "@angular/http": "2.3.0",
-    "@angular/platform-browser": "2.3.0",
-    "@angular/platform-browser-dynamic": "2.3.0",
-    "@angular/router": "3.3.0",
-    "@angular/upgrade": "2.3.0",
-    "@types/clipboard": "1.5.30",
+    "@angular/common": "2.4.2",
+    "@angular/compiler": "2.4.2",
+    "@angular/core": "2.4.2",
+    "@angular/forms": "2.4.2",
+    "@angular/http": "2.4.2",
+    "@angular/platform-browser": "2.4.2",
+    "@angular/platform-browser-dynamic": "2.4.2",
+    "@angular/router": "3.4.2",
+    "@angular/upgrade": "2.4.2",
+    "@types/clipboard": "1.5.31",
     "@types/express": "4.0.34",
-    "@types/minimist": "1.1.29",
+    "@types/minimist": "1.2.0",
     "@types/qrcode": "0.0.2",
     "@types/socket.io": "1.4.27",
     "@types/socket.io-client": "1.4.29",
     "bootstrap": "3.3.7",
-    "clean-css": "3.4.21",
-    "clipboard": "1.5.15",
+    "clean-css": "3.4.23",
+    "clipboard": "1.5.16",
     "core-js": "2.4.1",
     "file-uploader-component": "1.1.3",
     "github-fork-ribbon-css": "0.2.1",
@@ -60,12 +60,13 @@
     "qrcode": "0.5.0",
     "raw-loader": "0.5.1",
     "rev-static": "1.3.1",
-    "rxjs": "^5.0.0-rc.4",
-    "socket.io-client": "1.7.1",
-    "tslib": "1.2.0",
-    "tslint": "4.0.2",
+    "rxjs": "5.0.3",
+    "socket.io-client": "1.7.2",
+    "tslib": "1.5.0",
+    "tslint": "4.3.1",
     "typescript": "2.1.4",
     "webpack": "1.14.0",
-    "zone.js": "0.7.2"
+    "webrtc-adapter": "2.1.0",
+    "zone.js": "0.7.4"
   }
 }
