--- a/package.json
+++ b/package.json
@@ -5,18 +5,13 @@
   "main": "index.js",
   "scripts": {
     "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css -o static/vendor.bundle.css",
-    "bundle-vendor-css-debug": "cat ./node_modules/bootstrap/dist/css/bootstrap.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css > static/vendor.bundle.css",
     "bundle-index-css": "cleancss static/index.css -o static/index.bundle.css",
-    "bundle-index-css-debug": "cat static/index.css > static/index.bundle.css",
-    "clean": "rm -f static/vendor.bundle.js static/vendor.bundle.css static/main.bundle.js static/index.bundle.css static/main.js static/main.js.map static/vendor.js static/vendor.js.map static/vendor.bundle.js static/template.html static/app.html static/app.module.js static/app.component.js",
-    "clean-rev": "rm -f static/vendor.bundle-*.js static/vendor.bundle-*.css static/main.bundle-*.js static/index.bundle-*.css",
+    "clean-rev": "rm -f static/vendor.bundle-*.js static/vendor.bundle-*.css static/index.bundle-*.js static/index.bundle-*.css",
     "rev": "npm run clean-rev && rev-static",
     "build": "tsc",
-    "build-static": "npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && npm run minifier-template && webpack --display-modules && npm run rev && npm run clean",
-    "build-static-debug": "npm run bundle-vendor-css-debug && npm run bundle-index-css-debug && tsc -p static && npm run minifier-template-debug && webpack --display-modules --config webpack.config.debug.js && npm run rev && npm run clean",
+    "build-static": "npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && npm run minifier-template && webpack --display-modules && npm run rev",
     "lint": "tslint index.ts \"static/*.ts\"",
-    "minifier-template": "html-minifier --collapse-whitespace --case-sensitive static/app.template.html -o static/app.html",
-    "minifier-template-debug": "html-minifier --case-sensitive static/app.template.html -o static/app.html"
+    "minifier-template": "html-minifier --collapse-whitespace --case-sensitive static/app.template.html -o static/app.html"
   },
   "repository": {
     "type": "git",
@@ -35,15 +30,6 @@
     "socket.io": "1.7.2"
   },
   "devDependencies": {
-    "@angular/common": "2.4.2",
-    "@angular/compiler": "2.4.2",
-    "@angular/core": "2.4.2",
-    "@angular/forms": "2.4.2",
-    "@angular/http": "2.4.2",
-    "@angular/platform-browser": "2.4.2",
-    "@angular/platform-browser-dynamic": "2.4.2",
-    "@angular/router": "3.4.2",
-    "@angular/upgrade": "2.4.2",
     "@types/clipboard": "1.5.31",
     "@types/express": "4.0.34",
     "@types/minimist": "1.2.0",
@@ -53,18 +39,18 @@
     "bootstrap": "3.3.7",
     "clean-css": "3.4.23",
     "clipboard": "1.5.16",
-    "core-js": "2.4.1",
     "file-uploader-component": "1.1.3",
     "github-fork-ribbon-css": "0.2.1",
     "html-minifier": "3.2.3",
     "qrcode": "0.5.0",
     "raw-loader": "0.5.1",
     "rev-static": "1.3.1",
-    "rxjs": "5.0.3",
     "socket.io-client": "1.7.2",
     "tslib": "1.5.0",
     "tslint": "4.3.1",
     "typescript": "2.1.4",
+    "vue": "2.1.8",
+    "vue-class-component": "4.4.0",
     "webpack": "1.14.0",
     "webrtc-adapter": "2.1.0",
     "zone.js": "0.7.4"
