--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-uploader-component": "1.1.3",
     "github-fork-ribbon-css": "0.2.1",
     "html-minifier": "3.2.3",
+    "js-split-file": "1.0.1",
     "qrcode": "0.5.0",
     "raw-loader": "0.5.1",
     "rev-static": "1.3.1",
