--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/socket.io": "1.4.27",
     "@types/socket.io-client": "1.4.29",
     "bootstrap": "3.3.7",
-    "clean-css": "4.0.3",
+    "clean-css-cli": "4.0.0",
     "clipboard": "1.5.16",
     "file-uploader-component": "1.1.3",
     "github-fork-ribbon-css": "0.2.1",
