--- a/rev-static.config.json
+++ b/rev-static.config.json
@@ -9,7 +9,7 @@
     "outputFiles": [
         "static/index.html"
     ],
-    "json": false,
+    "json": "static/version.json",
     "ejsOptions": {
         "rmWhitespace": true
     },
