--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css -o static/vendor.bundle.css",
     "bundle-index-css": "cleancss static/index.css -o static/index.bundle.css",
-    "clean-rev": "rm -f static/vendor.bundle-*.js static/vendor.bundle-*.css static/index.bundle-*.js static/index.bundle-*.css",
+    "clean-rev": "rimraf static/vendor.bundle-*.js static/vendor.bundle-*.css static/index.bundle-*.js static/index.bundle-*.css",
     "rev": "npm run clean-rev && rev-static",
     "build": "tsc && npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && npm run minifier-template && webpack --display-modules && webpack --display-modules --config webpack.config.worker.js && npm run rev && webpack --display-modules --config webpack.config.service-worker.js",
     "lint": "tslint index.ts \"static/*.ts\"",
@@ -45,6 +45,7 @@
     "qrcode": "0.8.0",
     "raw-loader": "0.5.1",
     "rev-static": "2.1.2",
+    "rimraf": "2.6.1",
     "socket.io-client": "1.7.3",
     "tslib": "1.6.0",
     "tslint": "5.0.0",
