--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -2,19 +2,29 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "noImplicitAny": true,
-        "noUnusedLocals": true,
-        "noImplicitThis": true,
-        "strictNullChecks": true,
-        "noImplicitReturns": true,
-        "skipLibCheck": true,
-        "noEmitHelpers": true,
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
+
+        "outDir": ".",
+        "declaration": false,
         "lib": [
             "es5",
             "dom",
             "es2015"
-        ]
-    }
+        ],
+
+        "strict": true,
+        "noUnusedLocals": true,
+        "noImplicitReturns": true,
+
+        "skipLibCheck": true,
+        "importHelpers": true,
+        "jsx": "react",
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true
+    },
+    "include": [
+        "*.ts"
+    ],
+    "exclude": [
+        "node_modules/"
+    ]
 }
