--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "bundle-index-css": "cleancss static/index.css -o static/index.bundle.css",
     "clean-rev": "rimraf static/vendor.bundle-*.js static/vendor.bundle-*.css static/index.bundle-*.js static/index.bundle-*.css",
     "rev": "npm run clean-rev && rev-static --config static/rev-static.config.js",
-    "build": "tsc && npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && npm run minifier-template && webpack --display-modules --config static/webpack.config.js && webpack --display-modules --config static/webpack.config.worker.js && npm run rev && webpack --display-modules --config static/webpack.config.service-worker.js",
+    "build": "npm run file2variable && tsc && npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && webpack --display-modules --config static/webpack.config.js && webpack --display-modules --config static/webpack.config.worker.js && npm run rev && webpack --display-modules --config static/webpack.config.service-worker.js",
     "lint": "tslint index.ts \"static/*.ts\"",
-    "minifier-template": "html-minifier --collapse-whitespace --case-sensitive static/app.template.html -o static/app.html"
+    "file2variable": "file2variable-cli static/app.template.html -o static/variables.ts --html-minify"
   },
   "repository": {
     "type": "git",
@@ -39,11 +39,10 @@
     "clean-css-cli": "4.0.12",
     "clipboard": "1.6.1",
     "file-uploader-component": "1.1.5",
+    "file2variable-cli": "1.1.0",
     "github-fork-ribbon-css": "0.2.1",
-    "html-minifier": "3.4.3",
     "js-split-file": "1.1.6",
     "qrcode": "0.8.1",
-    "raw-loader": "0.5.1",
     "rev-static": "2.1.2",
     "rimraf": "2.6.1",
     "socket.io-client": "1.7.3",
