--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/clipboard": "1.5.33",
     "@types/express": "4.0.35",
     "@types/minimist": "1.2.0",
+    "@types/qrcode": "0.8.0",
     "@types/socket.io": "1.4.29",
     "@types/socket.io-client": "1.4.29",
     "bootstrap": "3.3.7",
