--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tool to copy text or file from one place, and get it from another place",
   "main": "index.js",
   "scripts": {
-    "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css -o static/vendor.bundle.css",
+    "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css ./node_modules/file-uploader-component/dist/file-uploader.min.css -o static/vendor.bundle.css",
     "bundle-index-css": "cleancss static/index.css -o static/index.bundle.css",
     "clean-rev": "rimraf static/vendor.bundle-*.js static/vendor.bundle-*.css static/index.bundle-*.js static/index.bundle-*.css",
     "rev": "npm run clean-rev && rev-static --config static/rev-static.config.js",
@@ -40,7 +40,7 @@
     "bootstrap": "3.3.7",
     "clean-css-cli": "4.1.3",
     "clipboard": "1.7.1",
-    "file-uploader-component": "2.0.0",
+    "file-uploader-component": "3.0.0",
     "file2variable-cli": "1.3.0",
     "github-fork-ribbon-css": "0.2.1",
     "js-split-file": "1.1.6",
