--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "rev": "npm run clean-rev && rev-static --config static/rev-static.config.js",
     "build": "npm run file2variable && tsc && npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && webpack --config static/webpack.config.js && npm run rev && npm run sw-precache",
     "lint": "tslint index.ts \"static/*.ts\" && npm run standard",
-    "file2variable": "file2variable-cli static/app.template.html -o static/variables.ts --html-minify",
+    "file2variable": "file2variable-cli static/app.template.html -o static/variables.ts --html-minify --base static",
     "sw-precache": "sw-precache --config static/sw-precache.config.js && npm run uglifyjs",
     "uglifyjs": "uglifyjs static/service-worker.js -o static/service-worker.bundle.js",
     "standard": "standard **/*.config.js",
@@ -44,11 +44,11 @@
     "clipboard": "1.7.1",
     "date-fns": "2.0.0-alpha.1",
     "file-uploader-component": "3.0.0",
-    "file2variable-cli": "1.3.0",
+    "file2variable-cli": "1.4.0",
     "github-fork-ribbon-css": "0.2.1",
     "js-split-file": "1.1.6",
     "qrcode": "0.8.2",
-    "rev-static": "2.5.0",
+    "rev-static": "2.6.0",
     "rimraf": "2.6.1",
     "socket.io-client": "2.0.3",
     "standard": "10.0.2",
