add locale for file uploader

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "bundle-vendor-css": "cleancss ./node_modules/bootstrap/dist/css/bootstrap.min.css ./node_modules/github-fork-ribbon-css/gh-fork-ribbon.css ./node_modules/file-uploader-component/dist/file-uploader.min.css -o static/vendor.bundle.css",
     "bundle-index-css": "cleancss static/index.css -o static/index.bundle.css",
-    "clean-rev": "rimraf static/vendor.bundle-*.js static/vendor.bundle-*.css static/index.bundle-*.js static/index.bundle-*.css",
-    "rev": "npm run clean-rev && rev-static --config static/rev-static.config.js",
-    "build": "npm run file2variable && tsc && npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && webpack --config static/webpack.config.js && npm run rev && npm run sw-precache",
+    "clean-rev": "rimraf static/*.bundle-*.js static/*.bundle-*.css",
+    "rev": "rev-static --config static/rev-static.config.js",
+    "build": "npm run clean-rev && npm run file2variable && tsc && npm run bundle-vendor-css && npm run bundle-index-css && tsc -p static && webpack --config static/webpack.config.js && npm run rev && npm run sw-precache",
     "lint": "tslint index.ts \"static/*.ts\" && npm run standard",
     "file2variable": "file2variable-cli static/app.template.html -o static/variables.ts --html-minify --base static",
     "sw-precache": "sw-precache --config static/sw-precache.config.js && npm run uglifyjs",
@@ -45,7 +45,7 @@
     "clean-css-cli": "4.1.6",
     "clipboard": "1.7.1",
     "date-fns": "2.0.0-alpha.1",
-    "file-uploader-component": "3.0.0",
+    "file-uploader-component": "4.0.0",
     "file2variable-cli": "1.4.0",
     "github-fork-ribbon-css": "0.2.1",
     "jasmine": "2.6.0",
@@ -56,7 +56,7 @@
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.3",
     "qrcode": "0.8.2",
-    "rev-static": "2.7.1",
+    "rev-static": "3.0.3",
     "rimraf": "2.6.1",
     "socket.io-client": "2.0.3",
     "standard": "10.0.2",
