--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "clean-scripts lint",
     "fix": "clean-scripts fix",
     "test": "clean-scripts test",
-    "release": "clean-scripts release"
+    "release": "clean-scripts release",
+    "watch": "clean-scripts watch"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,7 @@
     "bootstrap": "3.3.7",
     "clean-css-cli": "4.1.6",
     "clean-release": "1.3.2",
-    "clean-scripts": "1.1.1",
+    "clean-scripts": "1.2.1",
     "clipboard": "1.7.1",
     "date-fns": "2.0.0-alpha.1",
     "file-uploader-component": "5.0.0",
@@ -50,6 +51,7 @@
     "karma-firefox-launcher": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.4",
+    "no-unused-export": "1.0.1",
     "qrcode": "0.9.0",
     "rev-static": "3.2.2",
     "rimraf": "2.6.1",
@@ -62,6 +64,7 @@
     "uglify-js": "3.0.27",
     "vue": "2.4.2",
     "vue-class-component": "5.0.2",
+    "watch-then-execute": "1.0.0",
     "webpack": "3.4.1",
     "webrtc-adapter": "4.2.1"
   }
