improve watch script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,9 @@
         "jsx": "react",
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true
-    }
+    },
+    "exclude": [
+        "static/",
+        "node_modules/"
+    ]
 }
