--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "file-uploader-component": "5.0.0",
     "file2variable-cli": "1.5.2",
     "github-fork-ribbon-css": "0.2.1",
-    "http-server": "0.10.0",
     "jasmine": "2.7.0",
     "js-split-file": "2.0.0",
     "karma": "1.7.0",
@@ -54,7 +53,7 @@
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.4",
     "no-unused-export": "1.1.0",
-    "prerender-js": "1.1.0",
+    "puppeteer": "0.10.1",
     "qrcode": "0.9.0",
     "rev-static": "3.4.0",
     "rimraf": "2.6.1",
