--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "file2variable-cli": "1.5.2",
     "github-fork-ribbon-css": "0.2.1",
     "jasmine": "2.7.0",
+    "js-beautify": "1.6.14",
     "js-split-file": "2.0.0",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
