--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "clean-release": "1.3.4",
     "clean-scripts": "1.2.4",
     "clipboard": "1.7.1",
-    "date-fns": "2.0.0-alpha.1",
+    "date-fns": "1.28.5",
     "file-uploader-component": "5.1.1",
     "file2variable-cli": "1.5.2",
     "github-fork-ribbon-css": "0.2.1",
@@ -53,8 +53,8 @@
     "karma-firefox-launcher": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.4",
-    "no-unused-export": "1.2.4",
-    "puppeteer": "0.10.1",
+    "no-unused-export": "1.2.6",
+    "puppeteer": "0.10.2",
     "qrcode": "0.9.0",
     "rev-static": "3.4.0",
     "rimraf": "2.6.1",
