--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/qrcode": "0.8.0",
     "@types/socket.io": "1.4.30",
     "@types/socket.io-client": "1.4.30",
+    "autoprefixer": "7.1.4",
     "bootstrap": "3.3.7",
     "clean-css-cli": "4.1.10",
     "clean-release": "1.3.5",
@@ -54,6 +55,7 @@
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.4",
     "no-unused-export": "1.2.7",
+    "postcss-cli": "4.1.1",
     "puppeteer": "0.11.0",
     "qrcode": "0.9.0",
     "rev-static": "3.4.1",
