--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "clean-scripts test",
     "release": "clean-scripts release",
     "watch": "clean-scripts watch",
-    "prerender": "clean-scripts prerender"
+    "prerender": "clean-scripts prerender",
+    "screenshot": "clean-scripts screenshot"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "@types/express": "4.0.37",
     "@types/jasmine": "2.6.0",
     "@types/minimist": "1.2.0",
+    "@types/puppeteer": "0.10.2",
     "@types/qrcode": "0.8.0",
     "@types/socket.io": "1.4.31",
     "@types/socket.io-client": "1.4.30",
@@ -40,14 +42,13 @@
     "bootstrap": "3.3.7",
     "clean-css-cli": "4.1.10",
     "clean-release": "1.3.5",
-    "clean-scripts": "1.2.6",
+    "clean-scripts": "1.3.3",
     "clipboard": "1.7.1",
     "date-fns": "1.28.5",
     "file-uploader-component": "5.1.1",
     "file2variable-cli": "1.5.4",
     "github-fork-ribbon-css": "0.2.1",
     "jasmine": "2.8.0",
-    "js-beautify": "1.7.3",
     "js-split-file": "2.0.0",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
