--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "importHelpers": true,
         "jsx": "react",
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "newLine": "LF"
     },
     "exclude": [
         "static/",
