--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -19,7 +19,8 @@
         "importHelpers": true,
         "jsx": "react",
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "newLine": "LF"
     },
     "include": [
         "*.ts"
