--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss-cli": "4.1.1",
     "puppeteer": "0.13.0",
     "qrcode": "1.0.0",
+    "relative-time-vue-component": "4.1.0",
     "rev-static": "3.4.1",
     "rimraf": "2.6.2",
     "socket.io-client": "2.0.4",
