--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sw-precache": "5.2.0",
     "tslib": "1.8.1",
     "tslint": "5.8.0",
+    "tslint-config-standard": "7.0.0",
     "typescript": "2.6.1",
     "uglify-js": "^2.8",
     "vue": "2.5.13",
