--- a/package.json
+++ b/package.json
@@ -29,31 +29,31 @@
     "socket.io": "2.0.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "6.1.2",
-    "@commitlint/config-conventional": "6.1.2",
-    "@types/clipboard": "1.5.36",
+    "@commitlint/cli": "6.1.3",
+    "@commitlint/config-conventional": "6.1.3",
+    "@types/clipboard": "2.0.0",
     "@types/express": "4.11.1",
     "@types/jasmine": "2.8.6",
     "@types/minimist": "1.2.0",
-    "@types/puppeteer": "1.0.0",
+    "@types/puppeteer": "1.0.1",
     "@types/qrcode": "0.8.1",
     "@types/socket.io": "1.4.31",
     "@types/socket.io-client": "1.4.32",
-    "autoprefixer": "8.0.0",
+    "autoprefixer": "8.1.0",
     "bootstrap": "3.3.7",
-    "clean-css-cli": "4.1.10",
+    "clean-css-cli": "4.1.11",
     "clean-scripts": "1.7.0",
-    "clipboard": "1.7.1",
+    "clipboard": "2.0.0",
     "file-uploader-vue-component": "7.1.4",
     "file2variable-cli": "1.8.3",
     "github-fork-ribbon-css": "0.2.1",
-    "jasmine": "3.0.0",
+    "jasmine": "3.1.0",
     "js-split-file": "2.1.0",
     "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-firefox-launcher": "1.1.0",
     "karma-jasmine": "1.1.1",
-    "karma-webpack": "2.0.9",
+    "karma-webpack": "2.0.13",
     "markdownlint-cli": "0.7.1",
     "no-unused-export": "1.5.0",
     "postcss-cli": "5.0.0",
@@ -73,7 +73,8 @@
     "vue": "2.5.13",
     "vue-class-component": "6.2.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "3.11.0",
+    "webpack": "4.0.1",
+    "webpack-cli": "2.0.10",
     "webrtc-adapter": "6.1.1"
   }
 }
