--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/express": "4.11.1",
     "@types/jasmine": "2.8.6",
     "@types/minimist": "1.2.0",
-    "@types/puppeteer": "1.0.1",
+    "@types/puppeteer": "1.1.0",
     "@types/qrcode": "0.8.1",
     "@types/socket.io": "1.4.31",
     "@types/socket.io-client": "1.4.32",
@@ -69,12 +69,12 @@
     "tslint": "5.9.1",
     "tslint-config-standard": "7.0.0",
     "typescript": "2.7.2",
-    "uglify-js": "^2.8",
-    "vue": "2.5.13",
+    "uglify-js": "3",
+    "vue": "2.5.14",
     "vue-class-component": "6.2.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "4.0.1",
+    "webpack": "4.1.1",
     "webpack-cli": "2.0.10",
-    "webrtc-adapter": "6.1.1"
+    "webrtc-adapter": "6.1.3"
   }
 }
