--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "clean-scripts build",
+    "test:run": "clean-release --config clean-run.config.js",
+    "dev": "export NODE_ENV=development && clean-scripts build",
     "lint": "clean-scripts lint",
     "fix": "clean-scripts fix",
     "test": "clean-scripts test",
@@ -26,7 +28,8 @@
     "express": "4.16.3",
     "lodash.debounce": "4.0.8",
     "minimist": "1.2.0",
-    "socket.io": "2.1.0"
+    "socket.io": "2.1.0",
+    "tslib": "1.9.0"
   },
   "devDependencies": {
     "@commitlint/cli": "6.1.3",
@@ -42,7 +45,7 @@
     "autoprefixer": "8.2.0",
     "bootstrap": "4.1.0",
     "clean-css-cli": "4.1.11",
-    "clean-scripts": "1.7.0",
+    "clean-scripts": "1.8.0",
     "clipboard": "2.0.0",
     "file-uploader-vue-component": "7.2.2",
     "file2variable-cli": "1.8.3",
@@ -65,7 +68,6 @@
     "socket.io-client": "2.1.0",
     "standard": "11.0.1",
     "sw-precache": "5.2.1",
-    "tslib": "1.9.0",
     "tslint": "5.9.1",
     "tslint-config-standard": "7.0.0",
     "typescript": "2.8.1",
