--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "clean-scripts build",
-    "dev": "export NODE_ENV=development && clean-scripts build",
+    "dev": "cross-env NODE_ENV=development clean-scripts build",
     "lint": "clean-scripts lint",
     "fix": "clean-scripts fix",
     "test": "clean-scripts test",
@@ -47,6 +47,7 @@
     "clean-release": "2.6.0",
     "clean-scripts": "1.9.2",
     "clipboard": "2.0.1",
+    "cross-env": "5.2.0",
     "file-uploader-vue-component": "7.2.2",
     "file2variable-cli": "1.8.5",
     "github-fork-ribbon-css": "0.2.1",
