--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "clean-scripts lint",
     "fix": "clean-scripts fix",
     "test": "clean-scripts test",
-    "watch": "clean-scripts watch",
+    "watch": "cross-env NODE_ENV=development clean-scripts watch",
     "prerender": "clean-scripts prerender",
     "screenshot": "clean-scripts screenshot"
   },
@@ -69,6 +69,7 @@
     "socket.io-client": "2.1.1",
     "standard": "12.0.1",
     "sw-precache": "5.2.1",
+    "ts-loader": "5.0.0",
     "tslint": "5.11.0",
     "tslint-config-standard": "8.0.1",
     "tslint-sonarts": "1.7.0",
