--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@commitlint/config-conventional": "8.1.0",
     "@types/clipboard": "2.0.1",
     "@types/express": "4.17.0",
-    "@types/jasmine": "3.3.14",
+    "@types/jasmine": "3.3.16",
     "@types/minimist": "1.2.0",
-    "@types/puppeteer": "1.12.4",
+    "@types/puppeteer": "1.19.0",
     "@types/qrcode": "1.3.3",
     "@types/socket.io": "2.1.2",
     "@types/socket.io-client": "1.4.32",
@@ -48,7 +48,7 @@
     "bootstrap": "4.3.1",
     "clean-css-cli": "4.3.0",
     "clean-release": "2.7.0",
-    "clean-scripts": "1.12.0",
+    "clean-scripts": "1.12.1",
     "clipboard": "2.0.4",
     "cross-env": "5.2.0",
     "file-uploader-vue-component": "7.6.0",
@@ -64,25 +64,25 @@
     "markdownlint-cli": "0.17.0",
     "no-unused-export": "1.9.0",
     "postcss-cli": "6.1.3",
-    "puppeteer": "1.18.1",
+    "puppeteer": "1.19.0",
     "qrcode": "1.4.1",
     "relative-time-vue-component": "4.6.0",
     "rev-static": "3.4.3",
     "rimraf": "2.6.3",
     "socket.io-client": "2.2.0",
-    "standard": "13.0.2",
+    "standard": "13.1.0",
     "sw-precache": "5.2.1",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
     "tslint-config-standard": "8.0.1",
     "tslint-sonarts": "1.9.0",
-    "type-coverage": "2.1.0",
+    "type-coverage": "2.2.0-alpha.2",
     "typescript": "3.5.3",
     "uglify-js": "3",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "4.36.1",
+    "webpack": "4.38.0",
     "webpack-cli": "3.3.6",
     "webrtc-adapter": "7.2.8"
   }
