--- a/package.json
+++ b/package.json
@@ -76,14 +76,14 @@
     "tslint": "5.18.0",
     "tslint-config-standard": "8.0.1",
     "tslint-sonarts": "1.9.0",
-    "type-coverage": "2.2.0-alpha.2",
+    "type-coverage": "2.2.0",
     "typescript": "3.5.3",
     "uglify-js": "3",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "4.38.0",
+    "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
-    "webrtc-adapter": "7.2.8"
+    "webrtc-adapter": "7.2.9"
   }
 }
