--- a/package.json
+++ b/package.json
@@ -70,15 +70,16 @@
     "rev-static": "3.4.3",
     "rimraf": "2.6.3",
     "socket.io-client": "2.2.0",
-    "standard": "13.1.0",
     "sw-precache": "5.2.1",
     "ts-loader": "6.0.4",
-    "tslint": "5.18.0",
-    "tslint-config-standard": "8.0.1",
-    "tslint-sonarts": "1.9.0",
     "type-coverage": "2.2.0",
     "typescript": "3.5.3",
     "uglify-js": "3",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-plantain": "0.1.2",
+    "eslint": "5.16.0",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
