--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-conventional": "8.1.0",
     "@types/clipboard": "2.0.1",
-    "@types/express": "4.17.0",
+    "@types/express": "4.17.1",
     "@types/jasmine": "3.4.0",
     "@types/minimist": "1.2.0",
-    "@types/puppeteer": "1.19.0",
-    "@types/qrcode": "1.3.3",
+    "@types/puppeteer": "1.19.1",
+    "@types/qrcode": "1.3.4",
     "@types/socket.io": "2.1.2",
     "@types/socket.io-client": "1.4.32",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
     "autoprefixer": "9.6.1",
     "bootstrap": "4.3.1",
     "clean-css-cli": "4.3.0",
@@ -53,8 +53,8 @@
     "clean-scripts": "1.12.1",
     "clipboard": "2.0.4",
     "cross-env": "5.2.0",
-    "eslint": "6.1.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint": "6.2.1",
+    "eslint-config-prettier": "6.1.0",
     "eslint-plugin-plantain": "0.1.2",
     "file-uploader-vue-component": "7.6.0",
     "file2variable-cli": "1.9.0",
@@ -62,18 +62,18 @@
     "jasmine": "3.4.0",
     "js-split-file": "2.2.0",
     "karma": "4.2.0",
-    "karma-chrome-launcher": "3.0.0",
+    "karma-chrome-launcher": "3.1.0",
     "karma-firefox-launcher": "1.2.0",
     "karma-jasmine": "2.0.1",
     "karma-webpack": "4.0.2",
-    "markdownlint-cli": "0.17.0",
+    "markdownlint-cli": "0.18.0",
     "no-unused-export": "1.9.0",
     "postcss-cli": "6.1.3",
     "puppeteer": "1.19.0",
     "qrcode": "1.4.1",
     "relative-time-vue-component": "4.6.0",
     "rev-static": "3.4.3",
-    "rimraf": "2.6.3",
+    "rimraf": "3.0.0",
     "socket.io-client": "2.2.0",
     "sw-precache": "5.2.1",
     "ts-loader": "6.0.4",
@@ -83,8 +83,8 @@
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "watch-then-execute": "1.1.1",
-    "webpack": "4.39.1",
-    "webpack-cli": "3.3.6",
-    "webrtc-adapter": "7.2.9"
+    "webpack": "4.39.2",
+    "webpack-cli": "3.3.7",
+    "webrtc-adapter": "7.3.0"
   }
 }
