--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "clean-scripts lint",
     "fix": "clean-scripts fix",
     "test": "clean-scripts test",
-    "watch": "cross-env NODE_ENV=development clean-scripts watch",
-    "prerender": "clean-scripts prerender",
-    "screenshot": "clean-scripts screenshot"
+    "watch": "cross-env NODE_ENV=development clean-scripts watch"
   },
   "repository": {
     "type": "git",
@@ -38,12 +36,11 @@
     "@commitlint/config-conventional": "8.3.4",
     "@types/clipboard": "2.0.1",
     "@types/express": "4.17.6",
-    "@types/jasmine": "3.5.10",
     "@types/minimist": "1.2.0",
-    "@types/puppeteer": "2.1.0",
     "@types/qrcode": "1.3.4",
     "@types/socket.io": "2.1.5",
     "@types/socket.io-client": "1.4.33",
+    "@types/webpack": "4.41.13",
     "@typescript-eslint/eslint-plugin": "2.33.0",
     "@typescript-eslint/parser": "2.33.0",
     "autoprefixer": "9.7.6",
@@ -57,32 +54,26 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-plantain": "1.0.0",
     "file-uploader-vue-component": "7.6.1",
-    "file2variable-cli": "1.10.0",
+    "file2variable-cli": "1.10.1",
     "github-fork-ribbon-css": "0.2.3",
-    "jasmine": "3.5.0",
     "js-split-file": "2.2.0",
-    "karma": "5.0.5",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-firefox-launcher": "1.3.0",
-    "karma-jasmine": "3.1.1",
-    "karma-webpack": "4.0.2",
     "markdownlint-cli": "0.23.0",
     "no-unused-export": "1.10.3",
     "postcss-cli": "7.1.1",
-    "puppeteer": "3.0.4",
     "qrcode": "1.4.4",
     "relative-time-vue-component": "4.6.1",
-    "rev-static": "3.5.0",
+    "rev-static": "3.5.1",
     "rimraf": "3.0.2",
     "socket.io-client": "2.3.0",
     "sw-precache": "5.2.1",
     "ts-loader": "7.0.4",
+    "ts-node": "8.10.1",
     "type-coverage": "2.6.0",
     "typescript": "3.9.2",
     "uglify-js": "3",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
-    "watch-then-execute": "1.1.3",
+    "watch-then-execute": "1.1.4",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webrtc-adapter": "7.6.0"
