--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,8 @@
   "compilerOptions": {
     "module": "commonjs"
   },
-  "exclude": [
-    "static/",
-    "node_modules/",
-    "screenshots",
-    "prerender"
+  "files": [
+    "index.ts",
+    "lib.d.ts"
   ]
 }
